--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #583962;
+            background-color: #005ea6;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #4d6a78;
+            background-color: #799d55;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -361,7 +361,7 @@
 
 <body>
     <div class="container">
-        <h1>モイスティーヌ武蔵ヶ丘サロン<br>渡邊予約フォーム
+        <h1>cowzow<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -369,20 +369,19 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">ご来店回数※必須</div>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
-        </div>
-
-        <div class="label">メニューをお選びください</div>
-        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
+        <div class="label">買取内容をお選びください</div>
+        <div class="info-text">※買取内容を選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">afterフォロー</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">スキンケア体験</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">カウンセリング</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">ジュエリー（宝石）貴金属</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">ブランドバック</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ブランド品</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">ブランド腕時計</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">金券、商品券類</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">お酒</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スマートフォン</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">電動工具</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">その他</button>
         </div>
-
 
         <div class="label">希望日時</div>
         <div class="calendar-container">
@@ -427,14 +426,13 @@
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
-        let visitCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
         let availabilityCache = {};
         let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
         let totalAmount = 0; // 合計金額を格納する変数
-        let menuPrice = 0; // メニューの価格
+        let menuPrice = 0; // 買取内容の価格
         let optionsPrice = 0; // オプションの合計価格
 
         document.addEventListener('DOMContentLoaded', function () {
@@ -459,15 +457,21 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '眉カット〈30分〉': 0
+            'ベーシックマッサージ(パック付き)〈30分〉': 0
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'afterフォロー': 90,
-            'スキンケア体験': 120,
-            'カウンセリング': 60
+            'ジュエリー（宝石）貴金属': 30,
+            'ブランドバック': 30,
+            'ブランド品': 30,
+            'ブランド腕時計': 30,
+            '金券、商品券類': 15,
+            'お酒': 30,
+            'スマートフォン': 30,
+            '電動工具': 30,
+            'その他': 30
         };
 
 
@@ -475,12 +479,11 @@
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
 
-            // メニューが選択されていたら、各メニューを改行して表示
+            // 買取内容が選択されていたら、各買取内容を改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:red;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
-                : '・メニューが未選択です';
+                ? `<span style="color:red;"><strong>【買取内容】</strong></span><br>・${selectedSymptom.join('<br>')}`
+                : '・買取内容が未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
             const irradiationsText = irradiationsCount
@@ -503,13 +506,9 @@
 
             // displayInfo要素に情報を表示
             document.getElementById('displayInfo').innerHTML = `
-        <p>・<span style="color:#13ca5e;"><strong>お名前</strong></span>：${name}</p>
-        <hr>
-        <p>${visitCountText}</p>
+        <p>・<span style="color:#111;"><strong>お名前</strong></span>：${name}</p>
         <hr>
         <p>${selectedSymptomText}</p>
-        <hr>
-        <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
         <hr>
@@ -532,7 +531,7 @@
             button.addEventListener('click', () => {
                 const calendarContainer = document.querySelector('.calendar-container');
 
-                // 選択されたメニューがあればカレンダーを表示
+                // 選択された買取内容があればカレンダーを表示
                 if (document.querySelectorAll('.symptoms button.active').length > 0) {
                     calendarContainer.style.display = 'block';
                 } else {
@@ -566,10 +565,10 @@
             const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
 
             if (updatedSelectedButtons.length === 0) {
-                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
+                // すべてのボタンの選択が解除された場合、買取内容時間を0にリセット
                 selectedMenuTime = 0;
-                selectedSymptom = null; // 選択されたメニューをリセット
-                menuPrice = 0; // メニュー価格をリセット
+                selectedSymptom = null; // 選択された買取内容をリセット
+                menuPrice = 0; // 買取内容価格をリセット
             } else {
                 // 1つだけ選択状態にする
                 if (updatedSelectedButtons.length > 1) {
@@ -577,14 +576,14 @@
                     button.classList.add('active'); // クリックしたボタンだけを選択
                 }
 
-                // 選択されたメニューの時間を取得して保存
+                // 選択された買取内容の時間を取得して保存
                 const selectedMenu = button.textContent;
-                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
-                selectedSymptom = [selectedMenu]; // 選択されたメニュー名を配列として保存
-                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+                selectedMenuTime = menuTimes[selectedMenu] || 0; // 買取内容時間を取得して保存
+                selectedSymptom = [selectedMenu]; // 選択された買取内容名を配列として保存
+                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // 買取内容の価格を取得
             }
 
-            console.log('選択されたメニューの時間:', selectedMenuTime);
+            console.log('選択された買取内容の時間:', selectedMenuTime);
 
             // カレンダーを更新するために取得する日付を渡す
             fetchAvailability(currentDate);
@@ -612,10 +611,10 @@
                 treatmentText.innerHTML = '';
             }
 
-            // 選択されたメニューの名前と価格を取得
+            // 選択された買取内容の名前と価格を取得
             const symptomName = button.textContent;  // ボタンのテキストを取得
-            selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
-            menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+            selectedSymptom = [symptomName];  // 選択された買取内容名を配列として保存
+            menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // 買取内容の価格を取得
 
             // 表示を更新
             updateDisplayInfo();
@@ -664,24 +663,6 @@
             updateDisplayInfo(); // 表示を更新
         }
 
-        function selectVisit(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
-
-            document.getElementById('firstVisit').classList.remove('active');
-            document.getElementById('repeatVisit').classList.remove('active');
-            element.classList.add('active');
-            visitCount = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedVisitTime = visitTimes[visitCount];
-
-            console.log('選択された訪問回数の時間:', selectedVisitTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
             if (cell.classList.contains('unavailable')) {
@@ -711,7 +692,6 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
-                visitCount: visitCount,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 irradiationsCount: irradiationsCount,
                 dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
@@ -730,7 +710,7 @@
             }
 
             if (!formData.selectedSymptom) {
-                alert('メニューを選択してください。');
+                alert('買取内容を選択してください。');
                 return;
             }
 
@@ -742,10 +722,10 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【渡邊指名予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n買取内容：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。');
+                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
@@ -807,15 +787,11 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '10:00', '10:30',
-                '11:00', '11:30',
-                '12:00', '12:30',
-                '13:00', '13:30',
-                '14:00', '14:30',
-                '15:00', '15:30',
-                '16:00', '16:30',
-                '17:00', '17:30',
-                '18:00'
+                '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30',
+                '14:00', '14:30', '15:00', '15:30',
+                '16:00', '16:30', '17:00', '17:30',
+                '18:00', '18:30', '19:00'
             ];
 
             if (table.rows.length === 0) {
@@ -882,11 +858,22 @@
                     let visitDuration = selectedVisitTime || 0;
                     let irradiationsDuration = selectedirradiationsTime || 0;
 
-                    // メニュー時間と訪問回数の時間を合計して、終了時間を設定
+                    // 買取内容時間と訪問回数の時間を合計して、終了時間を設定
                     slotEnd.setMinutes(slotStart.getMinutes() + menuDuration + visitDuration + irradiationsDuration);
 
                     // 終了時間が翌日 (0時以降) になる場合は✕に設定
                     if (slotEnd.getDate() !== slotStart.getDate()) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
+
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 19 && slotEnd.getMinutes() > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 19) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                         continue;
@@ -932,11 +919,6 @@
                     }
                     // 営業日で、指定されている時間以外の時間は×
                     else if (businessEventTimes.length > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
